# FiveOS

./: .gitignore  CMakeLists.txt  build.py  link.lds  main.py
boot/: CMakeLists.txt  boot.s
fivekrnl/: CMakeLists.txt  kernel.c
sdk/include/: fiveos.h  typedefs.h
sdk/pdclib/: CMakeLists.txt
sdk/pdclib/platform/include/pdclib/: _PDCLIB_config.h
